# OLTS

./: .gitignore  LICENSE  LICENSE-DOCS  MAPPING_FORMAT.md  README.md  ROADMAP.md  国际物流轨迹格式调研报告.md  快递企业开放平台API对比分析报告.md  物流轨迹数据规范空白点分析报告.md
data-sources/: README.md
data-sources/cn/: cainiao.md  deppon.md  ems.md  jdl.md  jtexpress.md  sf.md  sto.md  yto.md  yunda.md  zto.md
data-sources/intl/: dhl.md  fedex.md  ups.md  usps.md
examples/v0.2/: cainiao-event.json  cainiao-shipment.json  deppon-event.json  deppon-shipment.json  dhl-event.json  dhl-shipment.json  ems-event.json  ems-shipment.json  fedex-event.json  fedex-shipment.json  jdl-event.json  jdl-shipment.json  jtexpress-event.json  jtexpress-shipment.json  sf-event.json  sf-shipment.json  sto-event.json  sto-shipment.json  ups-event.json  ups-shipment.json  usps-event.json  usps-shipment.json  yto-event.json  yto-shipment.json  yunda-event.json  yunda-shipment.json  zto-event.json  zto-shipment.json
mappings/: README.md
mappings/cn/: cainiao.csv  deppon.csv  (+8 more)
oltrack-py/: .gitignore  README.md  conftest.py  pyproject.toml
oltrack-py/src/oltrack/: __init__.py  mappings.py  normalize.py  state_machine.py  ulsc.py
oltrack-py/src/oltrack/adapters/: __init__.py  dhl.py  jdl.py  sf.py  ups.py  yto.py  zto.py
oltrack-py/tests/: test_normalize.py  test_state_machine.py
oltrack-ts/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
posts/: why-olts.md
tools/: validate.py  validate_schemas.py
ulsc/: README.md  state-machine.md  transitions.README.md  transitions.csv  ulsc.csv
(+21 files in other folders)
